--- a/itx.files.pdf.zugferd.tests/itx.files.pdf.zugferd.tests.csproj
+++ b/itx.files.pdf.zugferd.tests/itx.files.pdf.zugferd.tests.csproj
@@ -4,26 +4,32 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
     <Configurations>Debug;Release;Test</Configurations>
   </PropertyGroup>
+
   <PropertyGroup>
-    <PackageId>itx.files.pdf</PackageId>
+    <IsPackable>false</IsPackable>
     <Authors>Detlef Regehr</Authors>
     <Company>Detlef Regehr</Company>
     <Copyright>(C) 2025 Detlef Regehr, Germany</Copyright>
-    <PackageIcon>itx.png</PackageIcon>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <IncludeSymbols>true</IncludeSymbols>
-    <IncludeSource>true</IncludeSource>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <DebugType>portable</DebugType>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\itx.files.pdf.xml</DocumentationFile>
     <RepositoryUrl>https://github.com/DetlefRegehr/itx.files.pdf</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
   <ItemGroup>
-    <None Include="..\BuildNuGetPackages.ps1" Link="BuildNuGetPackages.ps1" />
-    <None Include="itx.png" Pack="true" PackagePath="" />
+    <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="xunit" Version="2.9.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\itx.files.pdf.zugferd\itx.files.pdf.zugferd.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Xunit" />
   </ItemGroup>
 
 </Project>
